methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:7: error: value update is not a member of java.awt.Color
  if (getCouleurSol() = Color.green){
      ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getCouleurSol() = Color.green){
  ^